--- a/src/App.css
+++ b/src/App.css
@@ -220,3 +220,9 @@ img {
 .plant:hover .toggle {
   display: block;
 }
+
+.out-of-stock {
+  margin-top: -100px;
+  color: rgb(255, 105, 113);
+  font-weight: bold;
+}
