--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
 html {
   box-sizing: border-box;
 }
@@ -22,11 +23,11 @@ body {
 }
 
 form {
-  width: 30vw;
   align-self: center;
-  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1), 0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
   border-radius: 7px;
   padding: 40px;
+  width: 25vw;
+  box-shadow: none;
 }
 
 input {
@@ -84,7 +85,7 @@ input {
 button {
   background: #5469d4;
   font-family: Arial, sans-serif;
-  color: #ffffff;
+  color: #fff;
   border-radius: 0 0 4px 4px;
   border: 0;
   padding: 12px 16px;
@@ -93,7 +94,7 @@ button {
   cursor: pointer;
   display: block;
   transition: all 0.2s ease;
-  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 4px 5.5px 0 rgba(0, 0, 0, 0.07);
   width: 100%;
 }
 
@@ -110,16 +111,16 @@ button:disabled {
 /* spinner/processing state, errors */
 
 .spinner,
-.spinner:before,
-.spinner:after {
+.spinner::before,
+.spinner::after {
   border-radius: 50%;
 }
 
 .spinner {
-  color: #ffffff;
+  color: #fff;
   font-size: 22px;
   text-indent: -99999px;
-  margin: 0px auto;
+  margin: 0 auto;
   position: relative;
   width: 20px;
   height: 20px;
@@ -129,13 +130,13 @@ button:disabled {
   transform: translateZ(0);
 }
 
-.spinner:before,
-.spinner:after {
+.spinner::before,
+.spinner::after {
   position: absolute;
   content: "";
 }
 
-.spinner:before {
+.spinner::before {
   width: 10.4px;
   height: 20.4px;
   background: #5469d4;
@@ -148,15 +149,15 @@ button:disabled {
   animation: loading 2s infinite ease 1.5s;
 }
 
-.spinner:after {
+.spinner::after {
   width: 10.4px;
   height: 10.2px;
   background: #5469d4;
   border-radius: 0 10.2px 10.2px 0;
   top: -0.1px;
   left: 10.2px;
-  -webkit-transform-origin: 0px 10.2px;
-  transform-origin: 0px 10.2px;
+  -webkit-transform-origin: 0 10.2px;
+  transform-origin: 0 10.2px;
   -webkit-animation: loading 2s infinite ease;
   animation: loading 2s infinite ease;
 }
@@ -166,6 +167,7 @@ button:disabled {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -196,9 +198,9 @@ label {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .profile-img-card {
@@ -214,6 +216,11 @@ label {
 .plant,
 .category {
   cursor: pointer;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .plant img:hover {
@@ -236,11 +243,6 @@ label {
   margin-bottom: -50px;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 .plant:hover .toggle {
   display: block;
 }
@@ -255,10 +257,11 @@ img {
   color: rgb(255, 105, 113);
 }
 
-.btn-primary,
-.btn,
-button {
-  background-color: #008000 !important;
+.btn-primary {
+  width: 220px;
+  background-color: #476d0a !important;
+  border: none;
+  font-weight: 450;
 }
 
 .btn-primary:focus,
@@ -266,11 +269,6 @@ button {
 .btn-primary::selection,
 .btn-primary:hover {
   background-color: #008000 !important;
-}
-
-.btn-primary:focus {
-  border-color: rgb(74, 146, 74);
-  outline: none !important;
 }
 
 .btn.btn-primary:focus,
@@ -283,50 +281,34 @@ button {
   background-color: rgb(74, 146, 74);
 }
 
-form {
-  width: 25vw;
-  align-self: center;
-  box-shadow: none;
-  border-radius: 7px;
-  padding: 40px;
-}
-
 td {
   padding-top: 7px;
 }
 
 .btn-outline-primary {
   width: 220px;
-  background: #476d0a!important;
+  background: #476d0a !important;
   border: none;
   color: white;
   font-weight: 450;
 }
 
 .btn-outline-primary:hover {
-  background: #476d0a!important;
+  background: #476d0a !important;
   outline: none;
-  box-shadow: none!important;
+  box-shadow: none !important;
 }
 
 .btn-outline-primary:focus {
-  background: #476d0a!important;
+  background: #476d0a !important;
   outline: none;
   box-shadow: none !important;
 }
 
 .btn-outline-primary:active {
-  background: #476d0a!important;
+  background: #476d0a !important;
   outline: none;
   box-shadow: none !important;
-}
-
-.btn-primary {
-  width: 220px;
-  background-color: #476d0a;
-  border: none;
-  color: white;
-  font-weight: 450;
 }
 
 .btn-primary:hover {
@@ -337,19 +319,19 @@ td {
 
 .btn-primary:focus {
   background-color: #476d0a;
-  outline: none;
   box-shadow: none;
+  border-color: rgb(74, 146, 74);
+  outline: none !important;
 }
 
 .btn-primary:active {
-  background-color: #476d0a!important;
+  background-color: #476d0a !important;
   outline: none;
   box-shadow: none;
-  outline: none;
 }
 
 .btn-primary:active:focus {
-  background-color: #476d0a!important;
+  background-color: #476d0a !important;
   outline: none;
-  box-shadow: none!important;
+  box-shadow: none !important;
 }
