--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-
 html {
   box-sizing: border-box;
 }
@@ -161,7 +160,6 @@ button:disabled {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
-
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -328,4 +326,11 @@ td {
   background-color: #476d0a !important;
   outline: none;
   box-shadow: none !important;
+}
+
+.mod a,
+.admin a {
+  text-decoration: none;
+  color: #008000;
+  font-weight: bold;
 }
