Add custom icon for toggler icon right navbar issue #3

--- a/src/App.css
+++ b/src/App.css
@@ -334,3 +334,9 @@ td {
   color: #008000;
   font-weight: bold;
 }
+
+.toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1em;
+}
