--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-
 html {
   box-sizing: border-box;
 }
@@ -37,7 +36,6 @@ input {
   border: 1px solid rgba(50, 50, 93, 0.1);
   max-height: 44px;
   font-size: 16px;
-
   /* font-size: 10px; */
   width: 100%;
   background: white;
@@ -96,7 +94,7 @@ button#submit {
 }
 
 button {
-  background: #5469d4;
+  background: #808080;
   font-family: Arial, sans-serif;
   color: #fff;
   border-radius: 0 0 4px 4px;
@@ -177,7 +175,6 @@ button:disabled {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
-
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -357,6 +354,32 @@ td {
   display: inline-block;
   width: 1.5em;
   height: 1em;
+}
+
+.swal-button--confirm {
+  background: #0a0;
+  outline: none !important;
+}
+
+.swal-button--confirm:hover {
+  background: #0a0 !important;
+  outline: none !important;
+  box-shadow: none;
+  border-color: rgb(74, 146, 74);
+}
+
+.swal-button--confirm:focus {
+  background: #0a0 !important;
+  outline: none !important;
+  box-shadow: none;
+  border-color: rgb(74, 146, 74);
+}
+
+.swal-button--confirm:active {
+  background: #0a0 !important;
+  outline: none !important;
+  box-shadow: none;
+  border-color: rgb(74, 146, 74);
 }
 
 @include media-breakpoint-up(sm) {
